--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,9 @@ body {
 
 .gallery__item img {
   width: 100%;
-  height: auto;
+  height: 152px;
   display: block;
+  object-fit: cover
 }
 
 .photo-info {
