--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Vanilla App Template</title>
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
-
+       
 body {
   font-family: 'Montserrat', sans-serif;
   color: #434455;
@@ -70,7 +70,7 @@ body {
   width: 100%;
   height: 152px;
   display: block;
-  object-fit: cover
+  object-fit: cover;
 }
 
 .photo-info {
